--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "styleguide-react",
   "version": "0.1.0",
+  "homepage": "https://johnhoysa.github.io/styleguide-react",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.4",
+    "gh-pages": "^6.0.0",
     "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.3"
   }
