--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "A style guide built with React",
   "icons": [
     {
-      "src": "./assets/favicon.ico",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "./assets/logos/logo192.png",
+      "src": "logos/logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "./assets/logos/logo512.png",
+      "src": "logos/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
