--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "tailwindcss -i ./App.css -o ./app/assets/builds/App.css"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.4",
     "gh-pages": "^6.0.0",
+    "postcss-import": "^15.1.0",
     "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.3"
   }
