--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "styleguide-react",
   "version": "0.1.0",
-  "homepage": "https://johnhoysa.github.io/styleguide-react",
+  "homepage": "https://johnhoysa.github.io/styleguide-react/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
